[gd_scene load_steps=14 format=3 uid="uid://58xnf7u2r7g1"]

[ext_resource type="Script" path="res://Scripts/world.gd" id="1_yyyn8"]
[ext_resource type="Texture2D" uid="uid://c6pyoepw3g3w0" path="res://Assets/WXP_Screen.png" id="2_33fyt"]
[ext_resource type="PackedScene" uid="uid://c0e54g3dw4d25" path="res://Scenes/mouse.tscn" id="3_20vdo"]
[ext_resource type="PackedScene" uid="uid://bng0i3cdu3nb6" path="res://Scenes/window_screen.tscn" id="4_83666"]
[ext_resource type="Script" path="res://Scenes/screen.gd" id="5_7743r"]
[ext_resource type="PackedScene" uid="uid://cgwvaerxqm48u" path="res://Scenes/killzone.tscn" id="6_tm5a1"]
[ext_resource type="PackedScene" uid="uid://bh2tmfn5cyb1y" path="res://Scenes/invisible_area.tscn" id="6_y3w20"]

[sub_resource type="Shader" id="Shader_5p1xp"]
code = "shader_type canvas_item;

uniform vec2 mask_position;  // Center of the mask in UV space
uniform vec2 mask_size;      // Width and height of the mask in UV space
uniform float edge_smoothness = 1.0;  // Smoothing effect

void fragment() {
    vec4 tex_color = texture(TEXTURE, UV); // Get sprite texture

    // Compute half extents
    vec2 half_size = mask_size * 0.5;

    // Compute distance from the mask center
    vec2 dist = abs(UV - mask_position) - half_size;

    // If inside the box, visibility is 1. Otherwise, smoothly fade out.
    float visibility = 1.0 - smoothstep(0.0, edge_smoothness, max(dist.x, dist.y));

    // Apply mask effect
    COLOR = tex_color;
    COLOR.a *= visibility;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0ph7l"]
shader = SubResource("Shader_5p1xp")
shader_parameter/mask_position = null
shader_parameter/mask_size = null
shader_parameter/edge_smoothness = 0.05

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2xgc6"]
size = Vector2(1196, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dgdrr"]
size = Vector2(21, 697)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_goqj3"]
size = Vector2(1193, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hcwr5"]
size = Vector2(20, 676)

[node name="World2" type="Node2D"]
script = ExtResource("1_yyyn8")
level = 4

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -5.0
offset_top = -21.0
offset_right = 1163.0
offset_bottom = 1003.0
scale = Vector2(1, 0.7)
texture = ExtResource("2_33fyt")

[node name="Mouse" parent="." instance=ExtResource("3_20vdo")]
z_index = 23
y_sort_enabled = false
position = Vector2(6, 7)

[node name="WindowScreen" parent="." instance=ExtResource("4_83666")]
y_sort_enabled = true
position = Vector2(1007, 161)
SPEED_X = 50
ROTATION = 0.3
CHARGE_RATE = 0.1

[node name="Area2D" parent="WindowScreen" index="5"]
collision_layer = 2
script = ExtResource("5_7743r")
shader_material = SubResource("ShaderMaterial_0ph7l")

[node name="WindowScreen2" parent="." instance=ExtResource("4_83666")]
y_sort_enabled = true
position = Vector2(721, 463)
SPEED_Y = 50
ROTATION = 0.4
CHARGE_RATE = 0.1
ROTATION_RIGHTBOUND = 0.4

[node name="Area2D" parent="WindowScreen2" index="5"]
collision_layer = 2
script = ExtResource("5_7743r")
shader_material = SubResource("ShaderMaterial_0ph7l")

[node name="WindowScreen3" parent="." instance=ExtResource("4_83666")]
y_sort_enabled = true
position = Vector2(436, 448)

[node name="Area2D" parent="WindowScreen3" index="5"]
collision_layer = 2
script = ExtResource("5_7743r")
shader_material = SubResource("ShaderMaterial_0ph7l")

[node name="invis" parent="WindowScreen3" instance=ExtResource("6_y3w20")]

[node name="WindowScreen4" parent="." instance=ExtResource("4_83666")]
y_sort_enabled = true
position = Vector2(199, 151)

[node name="Area2D" parent="WindowScreen4" index="5"]
collision_layer = 2
script = ExtResource("5_7743r")
shader_material = SubResource("ShaderMaterial_0ph7l")

[node name="WindowScreen5" parent="." instance=ExtResource("4_83666")]
y_sort_enabled = true
position = Vector2(740, 156)

[node name="Area2D" parent="WindowScreen5" index="5"]
collision_layer = 2
script = ExtResource("5_7743r")
shader_material = SubResource("ShaderMaterial_0ph7l")

[node name="invis" parent="WindowScreen5" instance=ExtResource("6_y3w20")]

[node name="WindowScreen6" parent="." instance=ExtResource("4_83666")]
y_sort_enabled = true
position = Vector2(150, 459)

[node name="Area2D" parent="WindowScreen6" index="5"]
collision_layer = 2
script = ExtResource("5_7743r")
shader_material = SubResource("ShaderMaterial_0ph7l")

[node name="WindowScreen7" parent="." instance=ExtResource("4_83666")]
y_sort_enabled = true
position = Vector2(469, 157)

[node name="Area2D" parent="WindowScreen7" index="5"]
collision_layer = 2
script = ExtResource("5_7743r")
shader_material = SubResource("ShaderMaterial_0ph7l")

[node name="invis" parent="WindowScreen7" instance=ExtResource("6_y3w20")]
position = Vector2(-319, 302)

[node name="WindowScreen8" parent="." instance=ExtResource("4_83666")]
y_sort_enabled = true
position = Vector2(989, 467)

[node name="Area2D" parent="WindowScreen8" index="5"]
collision_layer = 2
script = ExtResource("5_7743r")
shader_material = SubResource("ShaderMaterial_0ph7l")

[node name="kill" parent="WindowScreen8" instance=ExtResource("6_tm5a1")]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(583, -12)
shape = SubResource("RectangleShape2D_2xgc6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-10.5, 331.5)
shape = SubResource("RectangleShape2D_dgdrr")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(582.5, 659)
shape = SubResource("RectangleShape2D_goqj3")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1166, 325)
shape = SubResource("RectangleShape2D_hcwr5")

[connection signal="area_entered" from="WindowScreen/Area2D" to="Mouse" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="WindowScreen/Area2D" to="Mouse" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="WindowScreen2/Area2D" to="Mouse" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="WindowScreen2/Area2D" to="Mouse" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="WindowScreen3/Area2D" to="Mouse" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="WindowScreen3/Area2D" to="Mouse" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="WindowScreen4/Area2D" to="Mouse" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="WindowScreen4/Area2D" to="Mouse" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="WindowScreen5/Area2D" to="Mouse" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="WindowScreen5/Area2D" to="Mouse" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="WindowScreen6/Area2D" to="Mouse" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="WindowScreen6/Area2D" to="Mouse" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="WindowScreen7/Area2D" to="Mouse" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="WindowScreen7/Area2D" to="Mouse" method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="WindowScreen8/Area2D" to="Mouse" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="WindowScreen8/Area2D" to="Mouse" method="_on_area_2d_area_exited"]

[editable path="WindowScreen"]
[editable path="WindowScreen2"]
[editable path="WindowScreen3"]
[editable path="WindowScreen4"]
[editable path="WindowScreen5"]
[editable path="WindowScreen6"]
[editable path="WindowScreen7"]
[editable path="WindowScreen8"]
